--- a/css/main.css
+++ b/css/main.css
@@ -2,10 +2,13 @@ html {
     scroll-behavior: smooth;
     padding: 0;
     margin: 0;
+    color: var(--beige);
+    font-family: "Times New Roman", Times, serif;
 }
 
 body {
     overflow: hidden;
+    background-color:  var(--velvet);
 }
 
 .main {
@@ -16,15 +19,37 @@ body {
     display: flex;
     justify-content: space-around;
     align-items: center;
+    border-top: 2px solid var(--beige);
+    font-size: 2vh;
+    margin: 5vh;
+    margin-bottom: 5vh;
+    margin-top: 30vh;
+    height: 4vh;
+    padding: 5vh;
+    padding-bottom: 2vh;
 }
 
 h1 {
-    margin: 10%;
+    margin: 5vh;
+    margin-top: 10vh;
+    margin-bottom: 5vh;
     text-align: center;
-    height: 20vh;
-    font-size: 7vh;
+    font-size: 6vh;
+    height: 10vh;
+    padding: 5vh;
 }
 
 h2 {
+    margin: 5vh;
+    margin-bottom: 14vh;
     text-align: center;
+    font-size: 3vh;
+    height: 5vh;
+    padding: 5vh;
+    padding-top: 14vh;
+}
+
+:root {
+    --beige: #ebd58f;
+    --velvet: #34004d;
 }
