--- a/css/main.css
+++ b/css/main.css
@@ -9,10 +9,10 @@ html {
 body {
     overflow: hidden;
     background-color:  var(--velvet);
-}
-
-.main {
-
+    background-image: url('../img/fruit-of-life.png');
+    background-position: center center;
+    background-size: 200vh;
+    background-repeat: no-repeat;
 }
 
 .bottom-home-bar {
@@ -39,14 +39,26 @@ h1 {
     padding: 5vh;
 }
 
-h2 {
-    margin: 5vh;
-    margin-bottom: 14vh;
+#particle-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     text-align: center;
-    font-size: 3vh;
-    height: 5vh;
-    padding: 5vh;
-    padding-top: 14vh;
+    min-height: 10vh;
+    margin: 20vh;
+}
+
+#explore-button {
+    margin: 0;
+    text-align: center;
+    font-size: 4vh;
+    color: inherit;
+    text-decoration: none;
+    transition: transform 0.3s ease-in-out;
+}
+
+#explore-button:hover {
+    transform: scale(1.1);
 }
 
 :root {
