--- a/css/chapters.css
+++ b/css/chapters.css
@@ -16,28 +16,72 @@ h1 {
 
 }
 
+h3 {
+    margin-bottom: 0;
+}
+
+.top-bar {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
+
+.arrow {
+    min-height: 50px;
+    height: 8vh;
+}
+
+
+.simple-button {
+    background: none;
+    border: none;
+    padding: 10px;
+    outline: none;
+    color: inherit;
+    transition: transform 0.15s ease-in-out;
+}
+
+.simple-button:hover {
+    transform: scale(1.1);
+}
+
+/*
+.simple-button:focus,
+.simple-button:hover {
+    background: none;
+    color: inherit;
+    text-decoration: none;
+}
+*/
+
+
 #overlay-menu {
+    transform: translateY(-300%);
+    transition: transform 0.3s ease-in-out;
   position: absolute;
-  top: 30px;
-  background-color: white;
+  top: 15vh;
+  background-color: none;
   padding: 10px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
 }
 
 #overlay-menu a {
   display: block;
+  text-weight: bold;
   text-decoration: none;
   padding: 8px;
-  color: black;
+  color: var(--beige);
 }
 
 #overlay-menu a:hover {
-  background-color: #ddd;
+  background-color: #756f59;
 }
 
 .hidden {
-  display: none;
+  transform: translateY(0);
 }
+
 
 
 :root {
