--- a/css/chapters.css
+++ b/css/chapters.css
@@ -9,7 +9,6 @@ html {
 body {
     overflow: hidden;
     background-color:  var(--velvet);
-    
 }
 
 h1 {
@@ -33,12 +32,16 @@ h3 {
     align-items: center;
     justify-content: center;
     text-align: center;
+    position: absolute;
+    bottom: 3%;
+    left: 50%;
+    transform: translateX(-50%);
 }
 
 .bottom-bar a {
     transition: transform 0.15s ease-in-out;
-    display: block;
     text-weight: bold;
+    font-size: 2.5vh;
     text-decoration: none;
     padding: 8px;
     color: var(--beige);
@@ -74,7 +77,6 @@ h3 {
 
 #overlay-menu {
     transition: transform 0.3s ease-in-out;
-    transform: translateY(0)
     position: absolute;
     top: 15vh;
     background-color: none;
@@ -94,12 +96,42 @@ h3 {
 }
 
 .hidden {
-    transform: translateY(-200%);
+    transform: translateY(-250%);
 }
 
+.italicized {
+    text-weight: bold;
+}
+
+.box {
+    height: 75vh;
+}
+
+#intro-text {
+    position: absolute;
+    top: 45%;
+    left: 50%;
+    transform: translateX(-50%);
+    opacity: 0;
+    transition: opacity 1s ease-in-out;
+}
+
+.fade-in {
+    opacity: 1 !important;
+}
+
+#box-text {
+    position: absolute;
+    top: 30%;
+    left: 50%;
+    transform: translateX(-50%);
+    opacity: 0;
+    transition: opacity 1s ease-in-out;
+}
 
 
 :root {
     --beige: #ebd58f;
     --velvet: #34004d;
 }
+
